--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,13 +12,13 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
     <div class="container navbar-nav">
-        <a class="navbar-brand" >
+        <a class="navbar-brand">
             Admin
         </a>
         <div class="navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a  class="nav-link" href="{{ path('app_admin_category_index') }}">Gestion Catégories</a>
+                    <a class="nav-link" href="{{ path('app_admin_category_index') }}">Gestion Catégories</a>
                 </li>
             </ul>
         </div>
@@ -33,10 +33,27 @@
     </div>
 </nav>
 <div class="container">
-    {% block body %}
-    {% endblock %}
+
+    {#affichage des messages flash#}
+    {% for type, flashes in app.session.flashBag.all %}
+        {% for message in  flashes %}
+            {#pour la classe alert-danger du bootstrap#}
+            {% if type=='error' %}
+                {% set type='danger' %}
+            {% endif %}
+            <div class="alert alert-{{ type }}">
+                {#message|raw me permet de mettre des balise html qui seront pris en compte#}
+                {{ message|raw }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
 
 </div>
+
+{% block body %}  {% endblock %}
+
+
 
 
 {% block javascripts %}
