--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -3,23 +3,26 @@
 
 
 {% block body %}
-<h1>Gestion Catégories</h1>
-<p>
-    <a href="{{ path('app_admin_category_edit') }}">Ajouter une Catégorie
-    </a>
-</p>
-<table class="table table-striped">
-    <tr>
-        <th>Id</th>
-        <th>Nom</th>
-        <th width="350px"></th>
-    </tr>
-    {% for category in categories %}
+    <h1>Gestion Catégories</h1>
+    <p>
+        <a href="{{ path('app_admin_category_edit') }}">Ajouter une Catégorie
+        </a>
+    </p>
+    <table class="table table-striped">
         <tr>
-            <td>{{ category.id }}</td>
-            <td>{{ category.name }}</td>
-            <td></td>
+            <th>Id</th>
+            <th>Nom</th>
+            <th width="350px"></th>
         </tr>
-    {% endfor %}
-</table>
-    {% endblock %}
+        {% for category in categories %}
+            <tr>
+                <td>{{ category.id }}</td>
+                <td>{{ category.name }}</td>
+                <td>
+                    <a href="{{ path('app_admin_category_edit',{id:category.id}) }}" class="btn btn-primary">Modifier</a>
+                    <a href="{{ path('app_admin_category_delete',{id:category.id}) }}" class="btn btn-danger">Supprimer</a>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
+{% endblock %}
