--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Blog Symfony{% endblock %}</title>
-    {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('lib/bootstrap/bootstrap.min.css') }}">
-
-    {% endblock %}
-</head>
-<body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-
-    <div class="container navbar-nav">
-        <a class="navbar-brand">
-            Admin
-        </a>
-        <div class="navbar-collapse">
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}Blog symfony{% endblock %}</title>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('lib/bootstrap/bootstrap.min.css') }}">
+        {% endblock %}
+    </head>
+    <body>
+    <nav  class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container navbar-nav">
+            <a class="navbar-brand">
+                Admin
+            </a>
+            <div class="navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_admin_category_index') }}">
+                            Gestion catégories
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <nav  class="navbar navbar-expand-md navbar-dark bg-secondary">
+        <div class="container navbar-nav">
+            <a class="navbar-brand" href="{{ path('app_index_index') }}">
+                Blog
+            </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_admin_category_index') }}">Gestion Catégories</a>
+                    <a href="{{ path('app_security_register') }}" class="nav-link">
+                        Inscription
+                    </a>
                 </li>
             </ul>
         </div>
-    </div>
-</nav>
-<nav class="navbar navbar-expand-md navbar-dark bg-secondary">
+    </nav>
+    <div class="container">
+        {# affichage des messages flash #}
+        {% for type, flashes in app.session.flashBag.all %}
+            {% for message in flashes %}
+                {# pour la classe alert-danger du bootstrap #}
+                {% if type == 'error' %}
+                    {% set type = 'danger' %}
+                {% endif %}
+                <div class="alert alert-{{ type }}">
+                    {{ message|raw }}
+                </div>
+            {% endfor %}
 
-    <div class="container navbar-nav">
-        <a class="navbar-brand" href="{{ path('app_index_index') }}">
-            blog
-        </a>
-    </div>
-</nav>
-<div class="container">
-
-    {#affichage des messages flash#}
-    {% for type, flashes in app.session.flashBag.all %}
-        {% for message in  flashes %}
-            {#pour la classe alert-danger du bootstrap#}
-            {% if type=='error' %}
-                {% set type='danger' %}
-            {% endif %}
-            <div class="alert alert-{{ type }}">
-                {#message|raw me permet de mettre des balise html qui seront pris en compte#}
-                {{ message|raw }}
-            </div>
         {% endfor %}
-    {% endfor %}
 
+        {% block body %}{% endblock %}
+    </div>
+    {% block javascripts %}
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
 
-</div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+                integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+                crossorigin="anonymous"></script>
 
-{% block body %}  {% endblock %}
-
-
-
-
-{% block javascripts %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-
-
-    <script src="{{ asset('lib/bootstrap/bootstrap.min.js') }}"></script>
-{% endblock %}
-</body>
+        <script src="{{ asset('lib/bootstrap/bootstrap.min.js') }}"></script>
+    {% endblock %}
+    </body>
 </html>
+
