--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Blog symfony{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('lib/bootstrap/bootstrap.min.css') }}">
-        {% endblock %}
-    </head>
-    <body>
-    <nav  class="navbar navbar-expand-md navbar-dark bg-dark">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Blog symfony{% endblock %}</title>
+    {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('lib/bootstrap/bootstrap.min.css') }}">
+    {% endblock %}
+</head>
+<body>
+{#s'il y a un utilisateur connecté et qu'il a le rôle ROLE_ADMIN #}
+{% if is_granted('ROLE_ADMIN') %}
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container navbar-nav">
             <a class="navbar-brand">
                 Admin
@@ -20,52 +22,75 @@
                             Gestion catégories
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_admin_article_index') }}">
+                            Gestion articles
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <nav  class="navbar navbar-expand-md navbar-dark bg-secondary">
-        <div class="container navbar-nav">
-            <a class="navbar-brand" href="{{ path('app_index_index') }}">
-                Blog
-            </a>
-            <ul class="navbar-nav">
+{% endif %}
+<nav class="navbar navbar-expand-md navbar-dark bg-secondary">
+    <div class="container navbar-nav">
+        <a class="navbar-brand" href="{{ path('app_index_index') }}">
+            Blog
+        </a>
+        <ul class="navbar-nav">
+            {#app.user:l'utilisateur connecté#}
+            {% if app.user is null %}
                 <li class="nav-item">
                     <a href="{{ path('app_security_register') }}" class="nav-link">
                         Inscription
                     </a>
                 </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container">
-        {# affichage des messages flash #}
-        {% for type, flashes in app.session.flashBag.all %}
-            {% for message in flashes %}
-                {# pour la classe alert-danger du bootstrap #}
-                {% if type == 'error' %}
-                    {% set type = 'danger' %}
-                {% endif %}
-                <div class="alert alert-{{ type }}">
-                    {{ message|raw }}
-                </div>
-            {% endfor %}
-
+                <li class="nav-item">
+                    <a href="{{ path('app_security_login') }}" class="nav-link">
+                        Connexion
+                    </a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link">{{ app.user }}</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('app_security_logout') }}" class="nav-link">
+                        Déconnexion
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
+<div class="container">
+    {# affichage des messages flash #}
+    {% for type, flashes in app.session.flashBag.all %}
+        {% for message in flashes %}
+            {# pour la classe alert-danger du bootstrap #}
+            {% if type == 'error' %}
+                {% set type = 'danger' %}
+            {% endif %}
+            <div class="alert alert-{{ type }}">
+                {{ message|raw }}
+            </div>
         {% endfor %}
 
-        {% block body %}{% endblock %}
-    </div>
-    {% block javascripts %}
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                crossorigin="anonymous"></script>
+    {% endfor %}
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-                integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-                crossorigin="anonymous"></script>
+    {% block body %}{% endblock %}
+</div>
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
 
-        <script src="{{ asset('lib/bootstrap/bootstrap.min.js') }}"></script>
-    {% endblock %}
-    </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+
+    <script src="{{ asset('lib/bootstrap/bootstrap.min.js') }}"></script>
+{% endblock %}
+</body>
 </html>
 
