--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 {% if is_granted('ROLE_ADMIN') %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container navbar-nav">
-            <a class="navbar-brand">
+            <a class="navbar-brand" style="color:white">
                 Admin
             </a>
             <div class="navbar-collapse">
@@ -37,6 +37,7 @@
         <a class="navbar-brand" href="{{ path('app_index_index') }}">
             Blog
         </a>
+        {{ render(controller('App\\Controller\\CategoryController::menu')) }}
         <ul class="navbar-nav">
             {#app.user:l'utilisateur connecté#}
             {% if app.user is null %}
