--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -1,9 +1,45 @@
-{% extends'base.html.twig' %}
+{% extends 'base.html.twig' %}
 {% block body %}
 <h1>Gestion des articles</h1>
+    <p>
+        <a href="{{ path('app_admin_article_edit') }}">Ajouter un article
+        </a>
+    </p>
+    <table class="table table-striped">
+        <tr>
+            <th>id</th>
+            <th>Titre</th>
+            <th>Catégorie</th>
+            <th>Date de publication</th>
+            <th>Auteur</th>
+            <th>Image</th>
+            <th>Modification/Suppression</th>
+        </tr>
+        {% for article in articles %}
+            <tr>
+                <td>{{ article.id }}</td>
+                <td>{{ article.title }}</td>
+                <td>{{ article.category }}</td>
+                <td>{{ article.publicationDate|date("d/m/y H:i") }}</td>
+                <td>{{ article.author }}</td>
+                <td>{{ article.image }}</td>
+                <td>
+                    <a href="{{ path('app_admin_article_edit', {id: article.id}) }}"
+                       class="btn btn-primary">
+                        Modifier
+                    </a>
+                    <a href="{{ path('app_admin_article_delete', {id: article.id}) }}"
+                       class="btn btn-danger">
+                        Supprimer
+                    </a>
+                </td>
+            </tr>
 
 
 
+        {% endfor %}
+
+    </table>
 
 
 {% endblock %}
