--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base' %}
+{% extends 'base.html.twig' %}
 
 
 
@@ -19,10 +19,18 @@
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
                 <td>
-                    <a href="{{ path('app_admin_category_edit',{id:category.id}) }}" class="btn btn-primary">Modifier</a>
-                    <a href="{{ path('app_admin_category_delete',{id:category.id}) }}" class="btn btn-danger">Supprimer</a>
+                    <a href="{{ path('app_admin_category_edit', {id: category.id}) }}"
+                       class="btn btn-primary">
+                        Modifier
+                    </a>
+                    <a href="{{ path('app_admin_category_delete', {id: category.id}) }}"
+                       class="btn btn-danger">
+                        Supprimer
+                    </a>
                 </td>
             </tr>
+
+
         {% endfor %}
     </table>
 {% endblock %}
