--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -13,6 +13,7 @@
             <th>Date de publication</th>
             <th>Auteur</th>
             <th>Image</th>
+            <th>Commentaire</th>
             <th>Modification/Suppression</th>
         </tr>
         {% for article in articles %}
@@ -23,6 +24,7 @@
                 <td>{{ article.publicationDate|date("d/m/y H:i") }}</td>
                 <td>{{ article.author }}</td>
                 <td>{{ article.image }}</td>
+                <td>{{ article.comment|length }}</td>
                 <td>
                     <a href="{{ path('app_admin_article_edit', {id: article.id}) }}"
                        class="btn btn-primary">
