--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,11 @@
                             Gestion articles
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_admin_comment_index') }}">
+                            Gestion des commentaires
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
